# my-project-5

./: .gitignore  .pre-commit-config.yaml  .scaffold-project-vars.json  .scaffold-source  AGENTS.md  CONTRIBUTING.md  MANIFEST.yml  README.md  opencode.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spike.md  tech_debt.md
.github/workflows/: ai-guardrails.yml  auto-assign.yml  ci.yml  dora-metrics.yml  pr-checks.yml  review-reminder.yml
.opencode/skills/incident-response/: SKILL.md
.opencode/skills/pr-preparation/: SKILL.md
.opencode/skills/safe-refactoring/: SKILL.md
.opencode/skills/tdd-workflow/: SKILL.md
docs/adr/: 0001-flow-first-sdlc-framework.md  0002-scaffold-update-mechanism.md  README.md
docs/agents/: GUARDRAILS.md  README.md  STANDARDS.md
docs/agents/prompts/: api-docs.md  code-review.md  debug-issue.md  generate-migration.md  refactor-code.md  tdd-feature.md  write-tests.md
docs/agents/skills/: incident-response.md  pr-preparation.md  safe-refactoring.md  tdd-workflow.md
docs/metrics/: README.md  retro-template.md
docs/runbooks/: README.md  incident-response.md
docs/specs/: README.md
docs/testing/: README.md
scripts/: bootstrap.sh  build.sh  coverage.sh  dora-metrics.sh  guardrails-check.sh  lint.sh  run.sh  setup-ci.sh  setup.sh  test.sh  type-check.sh  update-scaffold.sh  validate-pr.sh
src/: auth.py  main.py
tests/: README.md
tests/unit/: test_auth.py
